# portfolio

./: .gitignore  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: chatbot.py  recognition.py  sir.py
backend/app/models/: chatbot_model.py  cv.txt  faiss_index.index  generate_handwriting_model.py  handwriting.keras  handwriting_digit.keras  handwriting_mnist.py  rag_model.py  sir_model.py
backend/app/utils/: image_processing.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.mjs  vue.config.js
frontend/src/: main.js
frontend/src/components/: FloatingConfigurator.vue
frontend/src/components/dashboard/: ChatbotWidget.vue  LetterRecognitionWidget.vue  PresentationWidget.vue  RecognitionWidget.vue  SimulationWidget.vue  SkillsWidget.vue
frontend/src/layout/: AppLayout.vue  AppTopbar.vue
frontend/src/views/: Dashboard.vue
