[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.7",
    "opencv-python>=4.8.1.78",
    "pillow>=11.1.0",
    "python-multipart>=0.0.20",
    "ruff>=0.9.3",
    "tensorflow==2.12.0",
]
